changing in build;no site

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -2,11 +2,11 @@
 ---
 @article{gage_science,
 	address = {Berkeley},
-	title = {First Major paper about {Water}},
+	title = {First change to bibliography paper about {Water}},
 	author = {Gage, John and others},
 	year = {2019}
   }
-  
+
 @inproceedings{holdgraf_evidence_2014,
 	address = {Brisbane, Australia, Australia},
 	title = {Evidence for {Predictive} {Coding} in {Human} {Auditory} {Cortex}},
